Updated version for eea.versions to 9.7.dev0

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+9.7.dev0 - (unreleased)
+-----------------------
+
 9.6 - (2016-11-21)
 ------------------
 * Feature: permalinks are now visible on all content types
