--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 9.8.dev0 - (unreleased)
 -----------------------
+* Change: updated package information
+[eduard-fironda]
 
 9.7 - (2017-02-21)
 ------------------
