--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+10.1.dev0 - (unreleased)
+------------------------
+
 10.0 - (2017-05-15)
 -------------------
 * Change: fixed PyLint warnings and errors
