--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 10.1.dev0 - (unreleased)
 ------------------------
+* Bug fix W3C compliance modifications
+  [valipod refs #86295]
 
 10.0 - (2017-05-15)
 -------------------
