Updated version for eea.versions to 10.2.dev0

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+10.2.dev0 - (unreleased)
+------------------------
+
 10.1 - (2017-08-16)
 -------------------
 * Bug fix W3C compliance modifications
