--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 10.2.dev0 - (unreleased)
 ------------------------
+* Change: assignVersion and revokeVersion now redirect to absolute_url + '/view'
+  for portal_types defined in site_properties.typesUseViewActionInListings
+  [ichim-david refs #87691]
 
 10.1 - (2017-08-16)
 -------------------
