--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 10.6.dev0 - (unreleased)
 ------------------------
+* Change: make new version warning simpler, more visible and user friendly.
+  [demarant refs #87958]
 
 10.5 - (2017-11-07)
 -------------------
