--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 11.5 - (2019-01-28)
 ---------------------
+* Jenkins: Add sonarqube step
+  [avoinea refs #101552]
 * Change: updated URLs pointing to eea.europa.eu with https://
   [alecghica refs #95849]
 
