--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 11.6-dev0 - (unreleased)
 ---------------------
+* Change: Modified the older versions viewlet to use effective/creation date
+  instead of lastUpload
+  [iulianpetchesi refs #102731]
 
 11.5 - (2019-01-28)
 ---------------------
