--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 11.7-dev0 - (unreleased)
 ---------------------------
+* Change: Modified the older versions viewlet to use publication version series
+  for publications(Report)
+  [iulianpetchesi refs #110020]
 
 11.6 - (2019-10-03)
 --------------------------
