--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 12.1-dev0 - (unreleased)
 ---------------------------
+* Change: versions data is now hidden behind an accordion
+  [ichim-david refs #117295]
 
 12.0 - (2020-01-30)
 ---------------------------
