--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,13 @@ Changelog
 
 12.2-dev0 - (unreleased)
 ---------------------------
+* Change: removed documentDescription class from assign_version when checking
+  current version set as that is not documentDescription
+  [ichim-david refs #117296]
+* Bug fix: avoid Unauthorised error when checking if context is report within
+  portlet_versions
+  [ichim-david refs #117296]
+
 
 12.1 - (2020-06-19)
 ---------------------------
