--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 12.3-dev0 - (unreleased)
 ---------------------------
+* Change: Removed extra icon from older versions
+  [ichim-david refs #120397]
 
 12.2 - (2020-07-21)
 ---------------------------
