Refs #108348 changed the following:
- added history entries with changes made in ticket
- versions.txt:
  - added functional tests documenting the changes made to
  make sure that in all places we point the user to obj + '/view'
  for objects that have the portal_type in
  site_properties/typesUseViewActionInListings
- versions.py:
  - removed extra parameter from earlier_versions introduced in a
  previous commit since  we check inside it by calling
  self.shouldObjUrlAppendView on the first result
  - renamed url_with_view -> append_view_to_url parameter for
  _obj_info method of GetVersions adapter.
  If True the object url is appended with "/view".

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,15 @@ Changelog
 
 12.4-dev0 - (unreleased)
 ---------------------------
+* Change: earlier versions of a given object now return with moddified urls
+  to have **/view** appended in case the object.portal_type is in
+  site_properties.typesUseViewActionInListings.
+ See docs/versions.txt for tests on how this affects the returned results.
+ [ichim-david refs #108348]
+* Change: ds_resolve now returns link with **/view** if needed
+ [ichim-david refs #108348]
+* Change: latest version portal message now point user to obj + '/view' if needed
+ [ichim-david refs #108348]
 
 12.3 - (2020-09-18)
 ---------------------------
